--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4403,3 +4403,17 @@ body.is-preload #intro:not(.hidden)+#header+#nav {
         visibility: visible;
     }
 }
+
+.image-overlay {
+    position: relative;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 20px;
+    opacity: 1; 
+  }
